--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "prettier": "2.7.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^5.41.0",
     "express": "^4.18.1",
     "mongoose": "^6.7.0"
   }
