--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.1",
     "mongoose": "^6.7.0"
   }
