--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Elena Solov <seaver@yandex.ru>",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
