--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
                 "ts": "never"
             }
         ],
-      "no-console": "off"
+      "no-console": "off",
+      "no-underscore-dangle": "off"
     }
 }
