--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,6 @@
             }
         ],
       "no-console": "off",
-      "no-underscore-dangle": "off"
+      "no-underscore-dangle": ["error", { "allow": ["_id"] }]
     }
 }
