--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "mesto-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend for mesto project",
   "main": "dist/app.js",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
     "build": "tsc",
     "dev": "ts-node-dev src/app.ts",
-    "start": "ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/app.ts"
   },
   "author": "Elena Solov <seaver@yandex.ru>",
   "license": "ISC",
