--- a/.eslintrc
+++ b/.eslintrc
@@ -4,9 +4,10 @@
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+      "plugin:@typescript-eslint/recommended"
     ],
-    "parser": "@typescript-eslint/parser",
+//    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
