--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "validator": "^13.7.0"
   }
 }
