--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/validator": "^13.7.10",
     "express": "^4.18.1",
     "mongoose": "^6.7.0",
     "validator": "^13.7.0"
