--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Elena Solov <seaver@yandex.ru>",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.2.0",
@@ -24,7 +26,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@types/validator": "^13.7.10",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.1",
     "mongoose": "^6.7.0",
     "validator": "^13.7.0"
