--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -28,6 +29,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "validator": "^13.7.0"
   }
