--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   }
 }
