--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
             }
         ],
       "no-console": "off",
-      "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+      "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+      "consistent-return": "off"
     }
 }
